--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
 
     footer {
         background-color: #4BA598;
+       
     }
     
     h1, h2 {
@@ -51,8 +52,7 @@
     }
     
     .main_nav {
-        backdrop-filter: blur(5px);
-        background-color: rgba(0, 0, 0, 0.5);
+       background-color: #4BA598;
         position: absolute;
         bottom: 0px;
         height: 4rem;
