--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -76,13 +76,14 @@ li {
 
 .pollenApp {
     color: black;
-    border-radius: 5px;
-    width: 300px;
-    margin-top: 2rem;
+    border-radius: 3px;
+    width: 200px;
+    margin-top: 1rem;
     margin-inline: auto;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
+    border: 3px solid black;
+    border-radius: 5px;
+    width: 23rem;
+     
 }
 
 #pollen_icon {
@@ -108,6 +109,7 @@ li {
     height: 9rem;
     border: 1px solid #000; 
     border-radius: 5px;
-    margin-top: 3rem;
+    margin-top: 4rem;
+    display: none;
   }
  
